--- a/src/styles.css
+++ b/src/styles.css
@@ -6,19 +6,25 @@
 }
 
 :root {
+    /* Whole web page */
     --main-gradient-fill:linear-gradient(0deg, rgba(27,42,62,1) 25%, rgba(38,59,85,1) 55%);
     --main-white-color: #ffffff;
-    /* --main-orange-color: #E95C49;
-    --main-black-color: #231F20;
-    --main-green-color: #2ECC71; */
-    --main-blue-color: #21CBFB;
-    --main-grey-color: #5e84a188;
     --main-navy-color: #181C47;
-    --main-dark-blue-color: #2A306D;
     --main-background-color: #263B55;
     --main-font-family: 'Roboto', sans-serif;
     --subtitle-font-size: 1.5rem;
     --caption-font-size: 0.9rem;
+    /* Chart colours */
+    --dark-yellow-color: #a39954;
+    --yellow-color: #dbd3a9;
+    --main-grey-color: #5e84a188;
+    --main-dark-blue-color: #2A306D;
+    /* --main-orange-color: #E95C49;
+    --main-black-color: #231F20;
+    --main-green-color: #2ECC71; 
+    --main-blue-color: #21CBFB; */
+    /* --light-blue-color: #C4DFE6;
+    --blue-color: #66A5AD; */
 }
 
 a {
@@ -73,9 +79,11 @@ body {
     flex-wrap: wrap;
 }
 
-#introWrapper {
-    width: 100%;
-    justify-content: center;
+#bodyWrapper {
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    width: 100vw;
     background: var(--main-white-color);
 }
 
@@ -139,14 +147,14 @@ body {
     align-items: center;
     align-self: center;
     background: lightgrey;;
-    width: 100%;
+    width: min(90%, 1024px);
     height: 2rem;
     padding: 2rem 3rem;
 }
 
 #chartContainer {
     display: flex;
-    width: 100%;
+    width: min(90%, 1024px);
     padding: 2rem 3rem;
     background: lightgrey;
 }
