--- a/src/styles.css
+++ b/src/styles.css
@@ -15,13 +15,15 @@
     --subtitle-font-size: 1.5rem;
     --caption-font-size: 0.9rem;
     /* Chart colours */
-    --dark-yellow-color: #a39954;
-    --yellow-color: #dbd3a9;
+    --dark-yellow-color: #FF9F40;
+    --yellow-color: #F4BE37;
     --main-grey-color: #5e84a188;
+    --electric-blue-color: #3078ff;
     --main-dark-blue-color: #2A306D;
-    /* --main-orange-color: #E95C49;
-    --main-black-color: #231F20;
+    --opaque-electric-blue-color: rgba(48, 120, 255, 0.5);
+    --main-orange-color: #E95C49;
     --main-green-color: #2ECC71; 
+    /* --main-black-color: #231F20;
     --main-blue-color: #21CBFB; */
     /* --light-blue-color: #C4DFE6;
     --blue-color: #66A5AD; */
@@ -137,26 +139,70 @@ body {
     width: 100%;
 }
 
-#dataWrapper {
+#dataContainer {
     display: flex;
     flex-direction: column;
+    flex-wrap: nowrap;
+    width: min(90%, 1024px);
+    border: solid 2px var(--main-grey-color);
+    margin: 3rem 0;
 }
 
 #summaryContainer {
     justify-content: space-around;
     align-items: center;
-    align-self: center;
-    background: lightgrey;;
-    width: min(90%, 1024px);
-    height: 2rem;
+    border-radius: 0.5rem;
+    width: 100%;
     padding: 2rem 3rem;
+    margin: 1rem 0;
+}
+
+.chartSummaryStats {
+    display: flex;
+    justify-content: center;
+    font-size: var(--subtitle-font-size);
+    font-weight: 400;
+}
+
+/* container */
+#forecastTime {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    background: var(--electric-blue-color);
+    border-radius: 0.5rem;
+    color: var(--main-white-color);
+    padding: 0.5rem 1rem;
+}
+
+#forecastTime #timePeriodCaption, #maxCaption, #minCaption {
+    font-size: var(--caption-font-size);
+}
+
+#intensityContainer {
+    justify-content: center;
+    align-items: center;
+}
+
+#intensityGauge {
+    margin: 0.2rem 0.25rem 0 0;
+}
+
+/* container */
+#forecastMax, #forecastMin {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    border: solid 2px var(--electric-blue-color);
+    border-radius: 0.5rem;
+    color: var(--electric-blue-color);
+    padding: 0.5rem 1rem;
 }
 
 #chartContainer {
     display: flex;
-    width: min(90%, 1024px);
+    width: 100%;
     padding: 2rem 3rem;
-    background: lightgrey;
 }
 
 footer {
