--- a/src/styles.css
+++ b/src/styles.css
@@ -36,6 +36,10 @@ a {
     color: var(--main-blue-color);
 }
 
+li {
+    list-style-type: none;
+}
+
 header {
     position: sticky;
     top: 0;
@@ -110,7 +114,7 @@ body {
 
 #introText {
     color: var(--main-background-color);
-    width: clamp(360px, 50%, 500px);
+    width: clamp(350px, 50%, 500px);
     padding: 1.25rem;
 }
 
@@ -127,7 +131,7 @@ body {
 
 #introImageContainer {
     justify-content: center;
-    width: clamp(360px, 50%, 500px);
+    width: clamp(350px, 40%, 500px);
 }
 
 #introImage {
@@ -155,6 +159,10 @@ body {
     margin: 0 1rem;
 }
 
+#firstInsight img {
+    padding-bottom: 0.5rem;
+}
+
 .insightCaption p {
     font-size: 0.75rem;
     color: var(--main-background-color);
@@ -177,16 +185,15 @@ body {
     font-size: var(--subtitle-font-size);
     font-weight: 400;
     color: var(--main-background-color);
-    padding: 0 3rem;
+    padding: 0 3rem 1rem 3rem;
 }
 
 #summaryContainer {
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     border-radius: 0.5rem;
     width: 100%;
     padding: 2rem 3rem;
-    margin: 1rem 0;
 }
 
 .chartSummaryStats {
@@ -197,23 +204,43 @@ body {
 }
 
 /* container */
+.spacedTab {
+    margin: 1rem 2rem;
+}
+
+#latestDataContainer{
+    justify-content: center;
+    align-items: center;
+    border: 2px solid var(--electric-blue-color);
+    border-radius: 0.55rem;
+}
+
 #forecastTime {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
     background: var(--electric-blue-color);
-    border-radius: 0.5rem;
+    border: 2px solid var(--electric-blue-color);
+    border-radius: 0.3rem 0 0 0.3rem;
     color: var(--main-white-color);
     padding: 0.5rem 1rem;
 }
 
 #forecastTime #timePeriodCaption, #maxCaption, #minCaption {
     font-size: var(--caption-font-size);
+    justify-content: center;
+    text-align: center;
 }
 
 #timePeriodCaption, #intensityContainer {
     justify-content: center;
     align-items: center;
+    flex-wrap: nowrap;
+    white-space: nowrap;
+}
+
+#timePeriod {
+    white-space: nowrap;
 }
 
 #intensityGauge {
@@ -241,7 +268,46 @@ body {
     display: flex;
     justify-content: center;
     width: 100%;
-    padding: 2rem 3rem;
+    padding: 1rem 3rem 2rem 3rem;
+}
+
+#piechartWrapper {
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: reverse;
+    width: 100%;
+    padding: 0 2rem 2rem 2rem;
+}
+
+#piechartLegendContainer {
+    justify-content: center;
+    font-family: var(--main-font-family);
+    font-weight: 400;
+    font-size: var(--caption-font-size);
+    color: var(--main-background-color);
+    max-width: 60%;
+    padding: 1rem 1rem 1rem 2rem;
+}
+
+#piechartLegend {
+    width: 100%;
+    border-spacing: 0 0.5rem;;
+}
+
+tr {
+    text-align: center;
+    line-height: 1.5rem;
+    margin: 0 0.5rem;
+}
+
+#legTab-Gas, #legTab-Coal, #legTab-Nuclear {
+    color: var(--main-white-color);
+    font-weight: 400;
+}
+
+#piechartContainer {
+    justify-content: center;
+    margin-left: auto;
 }
 
 footer {
@@ -302,9 +368,26 @@ footer {
         width: clamp(300px, 70%, 420px);
         aspect-ratio: 1 / 1;
     }
+    #latestDataContainer {
+        margin: 0 8rem;
+        min-width: 203px;
+    }
+     #forecastTime {
+        border-radius: 0.3rem 0.3rem 0 0;
+        width: 100%;
+    }
+    #forecastMax, #forecastMin {
+        width: 25%;
+        flex-direction: row;
+        align-self: center;
+        margin: 1rem 1vw;
+    }
+    #piechartLegentContainer {
+        width: 100%;
+    }
 }
 
-@media (max-width: 638px) {
+@media (max-width: 640px) {
     .indivInsight {
         width: 100%;
         align-items: center;
@@ -312,5 +395,8 @@ footer {
     .insightImage {
         width:50%;
         margin-bottom: 1rem;
+    }
+    #latestDataContainer {
+        width: 48%;
     }
 }
