--- a/src/styles.css
+++ b/src/styles.css
@@ -24,7 +24,7 @@
     --electric-blue-color: #3078ff;
     --opaque-electric-blue-color: rgba(48, 120, 255, 0.5);
     --main-orange-color: #E95C49;
-    --main-green-color: #2ECC71; 
+    --main-green-color: #49ce66; 
 }
 
 a {
@@ -52,7 +52,7 @@ header {
     justify-content: flex-start;
     align-items: center;
     padding: 2rem 3rem 1rem 3rem;
-    width: min(100%, 1240px);
+    width: 100%;
 }
 
 #title {
@@ -219,6 +219,7 @@ body {
 
 #dataContainer {
     display: flex;
+    align-items: center;
     flex-direction: column;
     flex-wrap: nowrap;
     width: min(100%, 1024px);
@@ -228,11 +229,24 @@ body {
 }
 
 #summaryContainer {
-    justify-content: center;
+    justify-content: start;
     align-items: center;
-    border-radius: 0.5rem;
-    width: 100%;
-    padding: 2rem 3rem;
+    width: 90%;
+    border-radius: 0.75rem;
+    margin: 1rem 2rem 0.5rem 2rem;
+}
+
+.spacedTab {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: clamp(150px, 25%, 211px);
+    border-radius: 0.75rem;
+    margin: 0.5rem 1rem 0.5rem 0;
+    background: var(--main-white-color);
+    user-select: none;
+    overflow: hidden;
 }
 
 .chartSummaryStats {
@@ -243,10 +257,6 @@ body {
 }
 
 /* container */
-.spacedTab {
-    margin: 1rem 2rem;
-}
-
 #latestDataContainer{
     justify-content: center;
     align-items: center;
@@ -256,70 +266,92 @@ body {
 
 #forecastTime {
     display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap; 
-    background: var(--electric-blue-color);
-    border: 2px solid var(--electric-blue-color);
-    border-radius: 0.3rem 0 0 0.3rem;
-    color: var(--main-white-color);
-    padding: 0.5rem 1rem;
-}
-
-#forecastTime, #timePeriodCaption, #maxCaption, #minCaption {
-    font-size: var(--caption-font-size);
-    justify-content: center;
-    text-align: center;
-}
-
-#timePeriodCaption, #intensityContainer {
-    justify-content: center;
     align-items: center;
-    flex-wrap: nowrap;
-    white-space: nowrap;
+    flex-wrap: wrap; 
+    width: 90%;
+    font-size: 0.8rem;
+    font-weight: 500;
+    color: var(--main-background-color);
+    padding: 0.5rem 0;
 }
 
 #timePeriod {
     white-space: nowrap;
+    font-size: 0.8rem;
+    padding-right: 0.2rem;
+    line-height: 1.5rem;
 }
 
-#intensityGauge {
-    margin: 0.2rem 0.25rem 0 0;
+#timePeriodCaption {
+    padding-right: 0.2rem;
+    line-height: 1.5rem;
+}
+
+#intensityContainer, .intensityCaptions, #maxContainer, #minContainer {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    flex-wrap: nowrap;
+    white-space: nowrap;
+    padding: 0 0 0.5rem 1rem;
+    margin-top: 0.5rem;
+    font-size: 0.75rem;
+}
+
+#intensityContainer, #maxContainer, #minContainer {
+    justify-content: space-between;
+    padding: 0 1rem;
+}
+
+#intensityContainer .chartSummaryStats {
+    display: flex;
+    justify-content: flex-start;
+    width: calc(50% + 1.25rem);
+}
+
+.gauge {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    margin-left: 0.5rem;  
+    background-color: var(--light-grey-color);
 }
 
 /* container */
-#latestIntensity {
-    padding: 0.5rem 2rem;
-    border: 2px solid var(--main-white-color);
-    border-radius:  0 0.5rem 0.5rem 0;
-    background: var(--main-white-color);
-    user-select: none;
-}
-
-#forecastContainer {
+.tabTitles {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    border: solid 2px var(--electric-blue-color);
-    border-radius: 0.5rem;
-    overflow: hidden;
+    justify-content: flex-start;
+    width: 100%;
+    padding: 0 0 0.5rem 0.5rem;
+    margin-top: 0.5rem;
+    font-size: 0.75rem;
+    white-space: nowrap;
 }
 
-#forecastMax, #forecastMin {
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    background: var(--main-white-color);
-    color: var(--electric-blue-color);
-    padding: 0.55rem 2rem;
-    user-select: none;
+.colourTabs {
+    width: 100%;
+    height: 0.33rem;
+    justify-self: flex-start;
+    align-self: flex-start;
+}
+
+#colourTab1 {
+    background: var(--electric-blue-color);
+}
+#colourTab2 {
+    background: var(--dark-yellow-color);
+}
+#colourTab3 {
+    background: var(--main-green-color);
 }
 
 .dataSections {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-self: center;
     background: var(--main-white-color);
 }
 
@@ -332,7 +364,7 @@ body {
 
 #gmLineWrapper {
     width: 100%;
-    margin: 1rem 1rem 2rem 1rem;
+    margin: 1rem 0 2rem 0;
 }
 
 #gmAccordion {
@@ -377,7 +409,17 @@ body {
     padding-bottom: 1rem;
     overflow: hidden;
     aspect-ratio: 1 / 1;
-    height: min(650px, 70vw);
+    height: min(550px, 70vw);
+}
+
+#gmLineChartCaption {
+    display: none;
+    padding-bottom: 1rem;
+    justify-content: start;
+    width: 100%;
+    font-size: 0.8rem;
+    padding: 0.5rem;
+    color: var(--main-background-color);
 }
 
 #piechartSection {
@@ -418,7 +460,7 @@ body {
     font-size: var(--caption-font-size);
     color: var(--main-background-color);
     max-width: 60%;
-    padding: 1rem 1rem 1rem 2rem;
+    padding: 1rem;
 }
 
 #piechartLegend {
@@ -508,23 +550,19 @@ footer {
         margin: 0 8rem;
         min-width: 203px;
     }
-    #latestIntensity {
-        width: 100%;
-        border-radius: 0.5rem;
+    #summaryContainer {
+        justify-content: center;
+    }
+    .spacedTab {
+        width: 30%;
     }
      #forecastTime {
-        border-radius: 0.3rem 0.3rem 0 0;
+        padding-left: 1rem;
         width: 100%;
     }
     #forecastContainer {
         width: 50%;
         overflow: hidden;
-    }
-    #forecastMax, #forecastMin {
-        width: 50%;
-        flex-direction: row;
-        align-self: center;
-        padding: 1rem 1vw;
     }
     #chartContainer {
         padding: 0.75rem 0.5rem;
@@ -577,4 +615,13 @@ footer {
         width: 100%;
         height: 70vw;
     }
+}
+
+@media (max-width: 535px) {
+    #summaryContainer {
+        justify-content: center;
+    }
+     .spacedTab {
+        width: max(133px, 45%);
+     }
 }
